<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">电池管家</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="menu_settings">Settings</string>
    <string name="refresh_normal">normal</string>
    <string name="refresh_cpu">cpu</string>
    <string name="power_screen">显示屏</string>
    <string name="power_wifi">Wi-Fi</string>
    <string name="power_bluetooth">蓝牙</string>
    <string name="power_cell">手机信号</string>
    <string name="power_phone">语音通话</string>
    <string name="power_idle">手机待机</string>
    <string name="process_kernel_label">Android OS</string>
    <string name="process_mediaserver_label">媒体服务器</string>
    <string name="battery_history_days"><xliff:g id="DAYS">%1$d</xliff:g> 天 <xliff:g id="HOURS">%2$d</xliff:g> 小时 <xliff:g id="MINUTES">%3$d</xliff:g> 分 <xliff:g id="SECONDS">%4$d</xliff:g> 秒</string>
    <string name="battery_history_hours"><xliff:g id="HOURS">%1$d</xliff:g> 小时 <xliff:g id="MINUTES">%2$d</xliff:g> 分 <xliff:g id="SECONDS">%3$d</xliff:g> 秒</string>
    <string name="battery_history_minutes"><xliff:g id="MINUTES">%1$d</xliff:g> 分 <xliff:g id="SECONDS">%2$d</xliff:g> 秒</string>
    <string name="battery_history_seconds"><xliff:g id="SECONDS">%1$d</xliff:g> 秒</string>
    <string name="battery_info_status_charging_ac">（交流电）</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">正在耗电</string>
    <string name="battery_info_status_not_charging">未在充电</string>
    <string name="battery_info_status_full">电量充足</string>
    <string name="battery_info_status_unknown">未知</string>
    <string name="battery_info_status_charging">正在充电</string>
    <string name="power_usage_level_and_status"><xliff:g id="LEVEL">%1$s</xliff:g> - <xliff:g id="STATUS">%2$s</xliff:g></string>
    
    
    <string name="test">test</string>
    <string name="title_activity_battery_info">电池详情</string>
    <string name="battery_level_status">电量使用情况:</string>
    <string name="add_values">Add values to the chart</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="add">Add</string>
    <string name="new_series">New series</string>
    <string name="title_activity_app_detail">耗电详情</string>
    <string name="upload">上传:</string>
    <string name="download">下载:</string>
    <string name="traffic_unit">KB</string>
    <string name="defaultTrafficAmount">0</string>
    <string name="default_cpu_amount">0</string>
    <string name="nocharging">未在充电</string>
    <string name="charging">正在充电</string>
    <string name="chargingFull">充电完成</string>
    <string name="battery_temperature">电池温度</string>
    <string name="battery_voltage">电池电压</string>
    <string name="battery_craft">电池工艺</string>
    <string name="battery_available_time">可用时间:</string>
    <string name="health_good">良好</string>
    <string name="health_dead">电量耗尽</string>
    <string name="health_over_voltage">电压过高</string>
    <string name="health_overheat">过热</string>
    <string name="health_unknown">未知</string>
    <string name="discharging">放电中</string>
    <string name="battery_scale">最大电量</string>
    <string name="battery_level">当前电量</string>
    <string name="battery_health">健康状况</string>
    <string name="unknown">未知</string>
    <string name="power_rank">近24小时应用耗电情况</string>
    <string name="application_name">应用名称</string>
    <string name="power_consume_default_value">1%</string>
    <string name="power_consume">耗电</string>
    <string name="shutdown">关闭</string>
    <string name="check">查看</string>
    <string name="consume_detail">耗电详情:</string>
    <string name="title_charging">专业充电</string>
    <string name="title_model">省电模式</string>
    <string name="title_ranking">耗电排行</string>
    <string name="title_current_model">当前模式</string>
    <string name="title_super_model">超级省电</string>
    <string name="title_custom_model">自定义模式</string>

</resources>