<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.edu.pkusz.battery.activity.AppDetailActivity">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#ff006318">

       <ImageView
        android:id="@+id/Icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical|left"
        android:layout_margin="5dp"
        android:src="@drawable/ic_launcher" />
    
    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/Icon"
        android:gravity="center"
        android:text="@string/power_cell"
        android:textColor="@android:color/white" />
    
     <TextView
            android:id="@+id/txtHaodian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="耗电："
            android:layout_below="@id/Name"
            android:layout_toRightOf="@id/Icon"
            android:layout_alignBottom="@id/Icon"
            android:textColor="@android:color/white" 
            android:gravity="center"
            />
     
      <TextView
            android:id="@+id/txtRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power_cell"
            android:layout_below="@id/Name"
            android:layout_toRightOf="@id/txtHaodian"
            android:layout_alignBottom="@id/txtHaodian"
            android:textColor="@android:color/white" 
            android:gravity="center"
            />		
    <Button 
        android:id="@+id/uninstall"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_red_dark"
        android:layout_below="@id/Icon"
        android:layout_marginLeft="20dp"
        android:text="卸载"
        />
      <Button 
        android:id="@+id/shutdown"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_green_dark"
        android:layout_below="@id/Icon"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="关闭"
        />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:background="#ff923b00">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CPU占用:" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/cpu_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_cpu_amount" />

                

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ms" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="数据:" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/upload" />

                   
                    <TextView
                        android:id="@+id/traffic_mount_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/defaultTrafficAmount" />


                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="KB" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/download" />

                    <TextView
                        android:id="@+id/traffic_mount_download"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/defaultTrafficAmount" />

                  

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/traffic_unit" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/traffic_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout2"
        android:background="#ff003e88"
        android:orientation="horizontal"
        android:padding="2dp" />

</RelativeLayout>
